--- a/pratica1.html
+++ b/pratica1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/pratica1.css">
-    <title>Eventos</title>
+    <link rel="stylesheet" href="css/pratica1.css">
+    <title>Eventos - trasferindo um elemento de um lugar para outro</title>
 </head>
 <body>
     <main>
@@ -25,6 +25,6 @@
         <div id="caixa2" class="caixa"> </div>
 
     </main>
-    <script src="../javascript/pratica1.js"></script>
+    <script src="javascript/pratica1.js"></script>
 </body>
 </html>
